checkerror.log
Vérification de la syntaxe pour liste_noeud.h :
gcc -std=c99 -c -Wall -Wextra -pedantic -Werror -fsyntax-only -x c liste_noeud.h
Vérification de la syntaxe pour liste_noeud.c :
gcc -std=c99 -c -Wall -Wextra -pedantic -Werror -fsyntax-only -x c liste_noeud.c
Vérification de la syntaxe pour dijkstra.h :
gcc -std=c99 -c -Wall -Wextra -pedantic -Werror -fsyntax-only -x c dijkstra.h
Vérification de la syntaxe pour dijkstra.c :
gcc -std=c99 -c -Wall -Wextra -pedantic -Werror -fsyntax-only -x c dijkstra.c
dijkstra.c: In function ‘cout’:
dijkstra.c:21:1: error: no return statement in function returning non-void [-Werror=return-type]
   21 | }
      | ^
dijkstra.c:20:28: error: unused parameter ‘grille’ [-Werror=unused-parameter]
   20 | static float cout(grille_t grille, coord_t courant, coord_t suivant) {
      |                   ~~~~~~~~~^~~~~~
dijkstra.c:20:44: error: unused parameter ‘courant’ [-Werror=unused-parameter]
   20 | static float cout(grille_t grille, coord_t courant, coord_t suivant) {
      |                                    ~~~~~~~~^~~~~~~
dijkstra.c:20:61: error: unused parameter ‘suivant’ [-Werror=unused-parameter]
   20 | static float cout(grille_t grille, coord_t courant, coord_t suivant) {
      |                                                     ~~~~~~~~^~~~~~~
dijkstra.c: In function ‘dijkstra’:
dijkstra.c:41:18: error: unused parameter ‘grille’ [-Werror=unused-parameter]
   41 |         grille_t grille,
      |         ~~~~~~~~~^~~~~~
dijkstra.c:42:17: error: unused parameter ‘source’ [-Werror=unused-parameter]
   42 |         coord_t source, coord_t destination,
      |         ~~~~~~~~^~~~~~
dijkstra.c:42:33: error: unused parameter ‘destination’ [-Werror=unused-parameter]
   42 |         coord_t source, coord_t destination,
      |                         ~~~~~~~~^~~~~~~~~~~
dijkstra.c:43:15: error: unused parameter ‘seuil’ [-Werror=unused-parameter]
   43 |         float seuil,
      |         ~~~~~~^~~~~
dijkstra.c:44:25: error: unused parameter ‘chemin’ [-Werror=unused-parameter]
   44 |         liste_noeud_t** chemin
      |         ~~~~~~~~~~~~~~~~^~~~~~
cc1: all warnings being treated as errors
